--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 
-REACT_APP_API_BASE_URL= https://personal-profile-server.onrender.com/api
+REACT_APP_API_BASE_URL=https://personal-profile-server.onrender.com/api
